--- a/Spotter_group/Calendar.xaml
+++ b/Spotter_group/Calendar.xaml
@@ -16,9 +16,15 @@
             <RowDefinition Height="3*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Calendar Name="calendar" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" 
+        <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Calendar Name="calendar"  
                   Margin="6,24,-38,32" SelectionMode="SingleRange" IsTodayHighlighted="True" 
-                  Background="#009999" BorderBrush="#666666" BorderThickness="5"
+                  Background="#009999" BorderBrush="#666666" BorderThickness="5" SelectedDatesChanged="calendar_SelectedDatesChanged"
                   />
+            
+            <TextBlock Name="txtBlockDateSeleted" Foreground="White" ToolTip="Selecte a Date"></TextBlock>
+            <TextBlock Name="txtBlockWorkout" Foreground="White"></TextBlock>
+            <TextBlock Name="txtBlockMenu" Foreground="White"></TextBlock>
+        </StackPanel>
     </Grid>
 </UserControl>
