Fixed the Calorie textbox population!

--- a/Spotter_group/Nutrition.xaml
+++ b/Spotter_group/Nutrition.xaml
@@ -49,51 +49,57 @@
             <Label Foreground="White">Select a Protein</Label>
             <ComboBox Grid.Column="0" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Proteins" 
                       Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top" Foreground="Black"
-                      ItemsSource="{Binding Source={StaticResource food}, XPath=food}" DisplayMemberPath="name" DropDownClosed="cboBox_Proteins_DropDownClosed">
+                      ItemsSource="{Binding Source={StaticResource food}, XPath=protein}" 
+                      DisplayMemberPath="name" DropDownClosed="cboBox_Proteins_DropDownClosed">
             </ComboBox>
             <Label Foreground="White" Grid.Column="0" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
-            <TextBox Name="tboxProteinCalories" Grid.Column="0" Grid.Row="4" Height="20" Margin="5"
-                     ></TextBox>
-            <ListBox Name="ResultsList" Height="20"></ListBox>
+            <TextBox Name="tboxProteinCalories" Grid.Column="0" Grid.Row="4" Height="20" Margin="5"></TextBox>            
         </StackPanel>
+        
         <StackPanel Grid.Row="2" Grid.Column="1" Margin="10,0">
             <Label Foreground="White">Select a Vegetable</Label>
             <ComboBox Grid.Column="1" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Vegetables" 
                       Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top"
-                      ItemsSource="{Binding Source={StaticResource food}, XPath=food/veggie}" DisplayMemberPath="name">
-                
+                      ItemsSource="{Binding Source={StaticResource food}, XPath=veggie}" 
+                      DisplayMemberPath="name">
             </ComboBox>
             <Label Foreground="White" Grid.Column="1" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
             <TextBox Name="tboxVeggieCalories" Grid.Column="1" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
+        
         <StackPanel Grid.Row="2" Grid.Column="2" Margin="10,0">
             <Label Foreground="White">Select a Fruit</Label>
             <ComboBox Grid.Column="2" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Fruits" 
                       Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top"
-                      ItemsSource="{Binding Source={StaticResource food}, XPath=food/fruit}" DisplayMemberPath="name">
-                
+                      ItemsSource="{Binding Source={StaticResource food}, XPath=food/fruit}" 
+                      DisplayMemberPath="name">
             </ComboBox>
             <Label Foreground="White" Grid.Column="2" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
             <TextBox Name="tboxFruitsCalories" Grid.Column="2" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
+        
         <StackPanel Grid.Row="2" Grid.Column="3" Margin="10,0">
             <Label Foreground="White">Select an Alcohol</Label>
             <ComboBox Grid.Column="3" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Alcohol" 
-                      Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top" ItemsSource="{Binding Source={StaticResource food}, XPath=food/alcohol}" DisplayMemberPath="name">
-                
+                      Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top" 
+                      ItemsSource="{Binding Source={StaticResource food}, XPath=food/alcohol}" 
+                      DisplayMemberPath="name">
             </ComboBox>
             <Label Foreground="White" Grid.Column="3" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
             <TextBox Name="tboxAlcoholCalories" Grid.Column="3" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
+        
         <StackPanel Grid.Row="2" Grid.Column="4" Margin="10,0">
             <Label Foreground="White">Select other</Label>
-            <ComboBox Grid.Column="4" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Misc" Margin="5, 10, 5, 10" 
-                      Height="25" VerticalAlignment="Top" ItemsSource="{Binding Source={StaticResource food}, XPath=food/misc}" DisplayMemberPath="name">
-                
+            <ComboBox Grid.Column="4" Grid.Row="2" IsReadOnly="True" x:Name="cboBox_Misc" 
+                      Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top" 
+                      ItemsSource="{Binding Source={StaticResource food}, XPath=food/misc}" 
+                      DisplayMemberPath="name">
             </ComboBox>
             <Label Foreground="White" Grid.Column="4" Grid.Row="3" Height="30" Margin="5">Enter Calories</Label>
             <TextBox Name="tboxMiscCalories" Grid.Column="4" Grid.Row="4" Height="20" Margin="5">0</TextBox>
         </StackPanel>
+        
         <Button Name="btnSaveMeal" Grid.Column="2" Grid.Row="3" Margin="15" Click="btnSaveMeal_Click">Calculate Calories</Button>
     </Grid>
 </UserControl>
