--- a/Spotter_group/Workout.xaml
+++ b/Spotter_group/Workout.xaml
@@ -9,23 +9,48 @@
     <!-- Steve, you might want to insert content into stackpanels within the grid as I did on the Nutrition Page, Shane-->
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="2*" />
-            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="3*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
        
         <StackPanel Margin="32,10,48,10" HorizontalAlignment="Stretch" Grid.Column="0" Grid.ColumnSpan="3">
-            <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Workout Intensity</Label>
+            <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Working Out</Label>
             <!--<TextBlock x:Name="txtBlock_CaloriesToConsume" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" ToolTip="2000"  Height="150"/>-->
         </StackPanel>
 
+         <!-- icon image tag a rooski-->
+        <Image Grid.Column="0" Grid.Row="1" Source="images/Icons/arm_curl.png"/>
+        <Image Grid.Column="0" Grid.Row="2" Source="images/Icons/cycle.png"/>
+        <Image Grid.Column="0" Grid.Row="3" Source="images/Icons/jumprope.png"/>
+        <Image Grid.Column="0" Grid.Row="4" Source="images/Icons/running.png"/>
+
+        <!-- text block descript a doodoos-->
+        <TextBlock Grid.Column="1" Grid.Row="1" Name="workout_description_1"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="2" Name="workout_description_2"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="3" Name="workout_description_3"></TextBlock>
+        <TextBlock Grid.Column="1" Grid.Row="4" Name="workout_description_4"></TextBlock>
         
-            <Label Foreground="Wheat" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center">Label 1</Label>
-            <Label Foreground="Wheat" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Center">Label 2</Label>
-        
+        <!--exact workout instructions sumption-->
+        <TextBlock Grid.Column="2" Grid.Row="1" Name="workout_instructions_1"></TextBlock>
+        <TextBlock Grid.Column="2" Grid.Row="2" Name="workout_instructions_2"></TextBlock>
+        <TextBlock Grid.Column="2" Grid.Row="3" Name="workout_instructions_3"></TextBlock>
+        <TextBlock Grid.Column="2" Grid.Row="4" Name="workout_instructions_4"></TextBlock>
+                   
+        <!--check box a dox-->
+        <CheckBox Grid.Column="4" Grid.Row="1" Name="check_box_1" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
+        <CheckBox Grid.Column="4" Grid.Row="2" Name="check_box_2" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
+        <CheckBox Grid.Column="4" Grid.Row="3" Name="check_box_3" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
+        <CheckBox Grid.Column="4" Grid.Row="4" Name="check_box_4" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
+    
+    
     </Grid>
 </UserControl>
