--- a/Spotter_group/Register.xaml
+++ b/Spotter_group/Register.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Name="gridRegister" Margin="0,15,0,0">
+    <Grid Name="gridRegister" Margin="10,15,10,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
@@ -26,6 +26,7 @@
             <RowDefinition Height="3*"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="3*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" >
@@ -52,7 +53,7 @@
         <StackPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
             <TextBox x:Name="tbUserName" Width="100" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBox>
         </StackPanel>
-        
+
         <StackPanel Grid.Row="0" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Label Foreground="#FFE0E0E0" FontSize="20">Current Weight</Label>
         </StackPanel>
@@ -91,42 +92,47 @@
             <TextBox x:Name="tbConfirmPassword" Width="200px"></TextBox>
         </StackPanel>
         <StackPanel Grid.Column="0" Grid.Row="6" HorizontalAlignment="Center" VerticalAlignment="Center" Grid.ColumnSpan="4" Margin="0,15">
-            <Label Foreground="#FFE0E0E0" FontSize="40px" HorizontalAlignment="Center" VerticalAlignment="Center">Character Transformation</Label>
+            <Label Foreground="#FFE0E0E0" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center">Character Transformation</Label>
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom">Tone Up</Label>
+            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Tone Up</Label>
             <CheckBox x:Name="cbToneUp" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <DockPanel  Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Ursula.png" Height="150px" Width="150px"/>
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\littlemermaid.png" Height="150px" Width="150px"/>
-        </StackPanel>
+            <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Want to become leaner with more muscle definition?  Then this workout routine is for you!  Our <Italic><Bold>Tone UP</Bold></Italic> will help you loose weight and add a little muscle, too!</TextBlock>
+        </DockPanel>
         <StackPanel Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom">Gain Muscle</Label>
+            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Gain Muscle</Label>
             <CheckBox x:Name="cbGainMuslce" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <DockPanel Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\snarfsnarf.png" Height="150px" Width="150px"/>
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\thundercat.png" Height="150px" Width="150px"/>
-        </StackPanel>
+            <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Want to bulk up?  Become bigger and stronger??  Our <Italic><Bold>Gain Muscle</Bold></Italic> routine will incorporate heavier weights with fewer reps.  This tried and true technique will get your body beach ready!</TextBlock>
+        </DockPanel>
         <StackPanel Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom">Lose Weight</Label>
+            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Lose Weight</Label>
             <CheckBox x:Name="cbLoseWeight" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Stimpy.png" Height="125px" Width="125px"/>
-            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\ren.png" Height="125px" Width="125px"/>
-        </StackPanel>
-        <!--<Border BorderBrush="#009999" BorderThickness="4" Grid.Column="3" Grid.Row="3" Margin="10px">-->
+        <DockPanel Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Stimpy.png" Height="125px" Width="150px"/>
+            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\ren.png" Height="125px" Width="150px"/>
+            <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Use our <Italic><Bold>Lose Weight</Bold></Italic> routine to shed any unwanted pounds!</TextBlock>
+            </DockPanel>
         <StackPanel Grid.Column="2" Grid.Row="9" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom">Cardio</Label>
+            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Cardio</Label>
             <CheckBox x:Name="cbCardio" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
         </StackPanel>
-        <StackPanel Grid.Column="2" Grid.Row="10" Orientation="Horizontal" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Wile_E_Coyote.png" Height="125px" Width="125px"/>
-                <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Faster-Road-Runner.gif" Height="125px" Width="125px"/>
+        <DockPanel Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Wile_E_Coyote.png" Height="125px" Width="150px"/>
+            <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Faster-Road-Runner.gif" Height="125px" Width="150px"/>
+            <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Cardiiovascular health is an important part or anyone's health.  Choose <Italic><Bold>Cardio</Bold></Italic> to improve yours!</TextBlock>
+        </DockPanel>
+        <StackPanel Grid.Column="3" Grid.Row="11">
+            <Button x:Name="btnRegister" Width="100px">Register</Button>
         </StackPanel>
-        <!--</Border>-->
     </Grid>
 </UserControl>
